# doosan-robot2

common2/: CMakeLists.txt  package.xml
common2/resource/: fake_joint_driver_node.cpp
common2/servicepack/plugin/robotiq_gazebo/: CMakeLists.txt  package.xml
dsr_bringup2/: package.xml
dsr_controller2/: CMakeLists.txt
dsr_controller2/config/: dsr_controller2.yaml
dsr_controller2/launch/: dsr_control2.launch.py
dsr_controller2/src/: dsr_controller2.cpp
dsr_description2/config/: macro.gazebo.xacro
dsr_description2/ros2_control/: a0509.gz_ros2_control.xacro  a0912.gz_ros2_control.xacro  e0509.gz_ros2_control.xacro  h2017.gz_ros2_control.xacro  h2515.gz_ros2_control.xacro  m0609.gz_ros2_control.xacro  m0617.gz_ros2_control.xacro  m1013.gz_ros2_control.xacro  m1509.gz_ros2_control.xacro
dsr_example2/realtime_control/: CMakeLists.txt  package.xml
dsr_example2/visualservoing/: package.xml
dsr_gazebo2/: CMakeLists.txt  package.xml
dsr_hardware2/: CMakeLists.txt  package.xml
dsr_hardware2/include/dsr_hardware2/: dsr_hw_interface2.h
dsr_msgs2/: CMakeLists.txt  package.xml
