<?xml version="1.0"?>
<package>
  <name>robotiq_gazebo</name>
  <version>1.0.0</version>
  <description>
    Gazebo wrapper for the Robotiq 85 gripper
  </description>
  
  <maintainer email="oramos@utec.edu.pe">oramos</maintainer>
  <author email="oramos@utec.edu.pe">oramos</author>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>ros_gz_sim</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>xmlrpcpp</build_depend>
  
  <run_depend>ros_gz_sim</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>xmlrpcpp</run_depend>
  
  <export>
    <ros_gz_sim plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
